fix stuck condition buttons

--- a/src/style.css
+++ b/src/style.css
@@ -10,11 +10,22 @@
     border-radius: 5px;
 }
 
+@media (hover : hover) {
+
+    .disadvantage:hover{
+    background-color: #df4759;
+    text-align: center;
+    color: white;
+    padding: 8px;
+}
+
 .advantage:hover{
     background-color: rgb(92, 184, 92);
     text-align: center;
     color: white;
     padding: 8px;
+}
+    
 }
 
 .advantage.active{
@@ -32,12 +43,7 @@
     border-radius: 5px;
 }
 
-.disadvantage:hover{
-    background-color: #df4759;
-    text-align: center;
-    color: white;
-    padding: 8px;
-}
+
 
 .disadvantage.active{
     background-color: #df4759;
